--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-magnetic-di": "^2.2.6",
     "sharp": "^0.29.1"
   },
   "devDependencies": {
