--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/schett-net/agt-guntrade-shop.git"
+    "url": "git+https://github.com/snek-at/agt-guntrade-shop.git"
   },
   "bugs": {
-    "url": "https://github.com/schett-net/agt-guntrade-shop/issues"
+    "url": "https://github.com/snek-at/agt-guntrade-shop/issues"
   },
   "scripts": {
     "build": "gatsby build",
@@ -56,6 +56,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-magnetic-di": "^2.2.6",
     "sharp": "^0.29.1"
   },
   "devDependencies": {
@@ -63,6 +64,8 @@
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
+    "@storybook/builder-webpack5": "^6.3.12",
+    "@storybook/manager-webpack5": "^6.3.12",
     "@storybook/react": "^6.3.12",
     "babel-loader": "^8.2.3",
     "cz-conventional-changelog": "^3.3.0",
@@ -71,6 +74,9 @@
     "gh-pages": "^3.2.3",
     "prettier": "2.3.2",
     "typescript": "^4.4.2"
+  },
+  "resolutions": {
+    "webpack": "5.52.0"
   },
   "browserslist": {
     "production": [
