--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@react-icons/all-files": "^4.1.0",
     "@snek-at/jaen": "^2.0.0",
-    "@snek-at/jaen-pages": "^2.0.0",
+    "@snek-at/jaen-pages": "^2.1.0",
     "electron": "^14.0.0",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.12.1",
@@ -64,6 +65,8 @@
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
+    "@storybook/builder-webpack5": "^6.3.12",
+    "@storybook/manager-webpack5": "^6.3.12",
     "@storybook/react": "^6.3.12",
     "babel-loader": "^8.2.3",
     "cz-conventional-changelog": "^3.3.0",
@@ -72,6 +75,9 @@
     "gh-pages": "^3.2.3",
     "prettier": "2.3.2",
     "typescript": "^4.4.2"
+  },
+  "resolutions": {
+    "webpack": "5.52.0"
   },
   "browserslist": {
     "production": [
