fix: update gh-pages deploy workflow
- Add .env.local
- Fix new git pull behaviour

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -95,9 +95,10 @@ jobs:
             echo "Jaen has already been initialized"
           fi
 
-      # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
+      https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
       - name: Install and Build 🔧
         run: |
+          git pull
           git checkout main
           yarn install
           yarn deploy
