--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@storybook/react": "^6.3.12",
     "babel-loader": "^8.2.3",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^10.0.0",
     "gatsby-plugin-compile-es6-packages": "^2.1.1",
     "gatsby-plugin-emotion": "^6.13.0",
     "gh-pages": "^3.2.3",
