--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gatsby-plugin-react-helmet": "^4.12.0",
     "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-source-filesystem": "^3.13.0",
+    "gatsby-source-shopify": "^6.5.1",
     "gatsby-transformer-sharp": "^3.13.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
