fix storybook startup

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@emotion/styled": "^11.3.0",
     "@react-icons/all-files": "^4.1.0",
     "@shopify/shopify-api": "^2.0.0",
+    "@snek-at/storybook-addon-chakra-ui": "^1.0.0-beta.2",
     "esm": "^3.2.25",
     "framer-motion": "^4.1.17",
     "gatsby": "^4.7.2",
@@ -59,16 +60,19 @@
     "react-magnetic-di": "^2.2.6",
     "sharp": "^0.29.1",
     "slugify": "^1.6.5",
+    "storybook-addon-gatsby": "^0.0.5",
     "urql": "^2.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
-    "@storybook/addon-actions": "^6.3.12",
-    "@storybook/addon-essentials": "^6.3.12",
-    "@storybook/addon-links": "^6.3.12",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
     "@storybook/builder-webpack5": "^6.3.12",
     "@storybook/manager-webpack5": "^6.3.12",
-    "@storybook/react": "^6.3.12",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
     "babel-loader": "^8.2.3",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^10.0.0",
