--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@react-icons/all-files": "^4.1.0",
     "@shopify/shopify-api": "^2.0.0",
     "@snek-at/storybook-addon-chakra-ui": "^1.0.0-beta.2",
-    "esm": "^3.2.25",
     "framer-motion": "^4.1.17",
     "gatsby": "^4.7.2",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
@@ -78,6 +77,7 @@
     "dotenv": "^10.0.0",
     "gatsby-plugin-compile-es6-packages": "^2.1.1",
     "gatsby-plugin-emotion": "^6.13.0",
+    "gatsby-plugin-ts-config": "^2.1.3",
     "gh-pages": "^3.2.3",
     "prettier": "2.3.2",
     "typescript": "^4.4.2"
