--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@emotion/styled": "^11.3.0",
     "@react-icons/all-files": "^4.1.0",
     "@shopify/shopify-api": "^2.0.0",
-    "@snek-at/storybook-addon-chakra-ui": "^1.0.0-beta.2",
+    "@snek-at/storybook-addon-chakra-ui": "1.0.0-beta.2",
     "framer-motion": "^4.1.17",
     "gatsby": "^4.7.2",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
@@ -56,6 +56,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "react-magnetic-di": "^2.2.6",
     "sharp": "^0.29.1",
     "slugify": "^1.6.5",
