--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-magnetic-di": "^2.2.6",
+    "react-scrollspy": "^3.4.3",
     "sharp": "^0.30.1",
     "slugify": "^1.6.5",
     "storybook-addon-gatsby": "^0.0.5",
