--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@react-icons/all-files": "^4.1.0",
-    "@shopify/shopify-api": "^2.0.0",
-    "@snek-at/storybook-addon-chakra-ui": "1.0.0-beta.2",
     "framer-motion": "^4.1.17",
     "gatsby": "^4.7.2",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
@@ -50,9 +48,9 @@
     "gatsby-plugin-offline": "^5.7.0",
     "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-sharp": "^4.7.0",
+    "gatsby-plugin-sitemap": "^5.9.0",
     "gatsby-source-filesystem": "^4.7.0",
     "gatsby-transformer-sharp": "^4.7.0",
-    "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -62,11 +60,10 @@
     "react-magnetic-di": "^2.2.6",
     "react-scrollspy": "^3.4.3",
     "sharp": "^0.30.1",
-    "slugify": "^1.6.5",
-    "storybook-addon-gatsby": "^0.0.5",
     "urql": "^2.0.6"
   },
   "devDependencies": {
+    "@snek-at/storybook-addon-chakra-ui": "1.0.0-beta.2",
     "@babel/core": "^7.15.8",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
