--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "@emotion/styled": "^11.3.0",
     "@react-icons/all-files": "^4.1.0",
     "@shopify/shopify-api": "^2.0.0",
+    "@snek-at/react-lottie": "^1.0.0-beta.3",
     "@snek-at/storybook-addon-chakra-ui": "1.0.0-beta.2",
     "framer-motion": "^4.1.17",
     "gatsby": "^4.7.2",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
     "gatsby-plugin-image": "^2.7.0",
     "gatsby-plugin-manifest": "^4.7.0",
+    "gatsby-plugin-meta-redirect": "^1.1.1",
     "gatsby-plugin-offline": "^5.7.0",
     "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-sharp": "^4.7.0",
@@ -56,6 +58,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-magnetic-di": "^2.2.6",
     "react-scrollspy": "^3.4.3",
