--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "gatsby-plugin-ts-config": "^2.1.3",
     "gh-pages": "^3.2.3",
     "prettier": "2.3.2",
+    "storybook-addon-gatsby": "^0.0.5",
     "typescript": "^4.4.2"
   },
   "resolutions": {
