--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "@chakra-ui/react": "^1.6.9",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@jaenjs/jaen": "3.0.0-beta.15",
+    "@jaenjs/jaen": "3.0.0-beta.19",
     "@react-icons/all-files": "^4.1.0",
+    "@sendgrid/mail": "^7.6.2",
     "@shopify/shopify-api": "^2.0.0",
     "@snek-at/react-lottie": "^1.0.0-beta.3",
     "@snek-at/storybook-addon-chakra-ui": "1.0.0-beta.2",
     "@types/react-scroll": "^1.8.3",
     "@types/react-scrollspy": "^3.3.5",
+    "esm-ts-node": "^1.0.7",
     "framer-motion": "^4.1.17",
     "gatsby": "^4.7.2",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
@@ -67,6 +69,8 @@
     "react-scroll": "^1.8.6",
     "react-scrollspy": "^3.4.3",
     "sharp": "^0.30.1",
+    "ts-node": "^10.7.0",
+    "ts-node-esm": "^0.0.6",
     "urql": "^2.0.6"
   },
   "devDependencies": {
