chore: add react based mapbox
 - Add non-interactive map

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@shopify/shopify-api": "^2.0.0",
     "@snek-at/react-lottie": "^1.0.0-beta.3",
     "@snek-at/storybook-addon-chakra-ui": "1.0.0-beta.2",
+    "@types/mapbox-gl": "^2.6.3",
     "@types/react-scroll": "^1.8.3",
     "@types/react-scrollspy": "^3.3.5",
     "esm-ts-node": "^1.0.7",
@@ -67,6 +68,7 @@
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-magnetic-di": "^2.2.6",
+    "react-map-gl": "^7.0.10",
     "react-scroll": "^1.8.6",
     "react-scrollspy": "^3.4.3",
     "sharp": "^0.30.1",
