--- a/.github/workflows/jaen-publish.yml
+++ b/.github/workflows/jaen-publish.yml
@@ -88,7 +88,12 @@ jobs:
       - name: Migrate Jaen Data to Github 📝
         # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsenv
         env:
-          GATSBY_GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
+          SCALE_SERP_APIKEY: ${{ secrets.SCALE_SERP_APIKEY }}
+          PLACE_ID: ${{ secrets.PLACE_ID }}
+          SHOPIFY_SHOP_PASSWORD: ${{ secrets.HOPIFY_SHOP_PASSWORD }}
+          SHOP: ${{ secrets.SHOP }}
+          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+          GATSBY_MAPBOX_ACCESS_TOKEN: ${{ secrets.GATSBY_MAPBOX_ACCESS_TOKEN }}
         run: |
           # Create gh-pages branch without history
           #git checkout --orphan gh-pages
