--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "deploy": "gatsby build && cp CNAME public/ && gh-pages -d public",
+    "deploy:incremental": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build && cp CNAME public/ && gh-pages -d public",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "commit": "git-cz --disable-emoji",
     "storybook": "start-storybook -p 6006",
