--- a/.github/workflows/jaen-publish.yml
+++ b/.github/workflows/jaen-publish.yml
@@ -9,9 +9,17 @@ name: Jaen Publish
 
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions#on
 on:
-  # https://help.github.com/en/articles/workflow-syntax-for-github-actions
-  repository_dispatch:
-    types: [UPDATE_JAEN_DATA]
+  workflow_call:
+    inputs:
+      JAEN_MIGRATION_URL:
+        description: Public URL of the Microsoft Teams incoming webhook. To get the value, make sure that channel in
+        type: string
+        required: true
+      WORKING_DIRECTORY:
+        description: Public URL of the Microsoft Teams incoming webhook. To get the value, make sure that channel in
+        type: string
+        required: false
+
 
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobs
 jobs:
@@ -21,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsenv
     env:
-      JAEN_MIGRATION_URL: ${{github.event.client_payload.jaendata_url}}
+      JAEN_MIGRATION_URL: ${{ inputs.JAEN_MIGRATION_URL }}
 
     # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idsteps
     steps:
@@ -31,42 +39,6 @@ jobs:
         with:
           # Relative path under $GITHUB_WORKSPACE to place the repository
           path: '.'
-
-      # https://dev.to/mpocock1/how-to-cache-nodemodules-in-github-actions-with-yarn-24eh
-      - name: Yarn Cache Directory Path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      # https://github.com/marketplace/actions/cache
-      - name: Yarn Cache Folder
-        uses: actions/cache@v3
-        with:
-          # https://help.github.com/en/articles/virtual-environments-for-github-actions#default-environment-variables
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      # https://github.com/marketplace/actions/cache
-      - name: Gatsby Cache Folder
-        uses: actions/cache@v3
-        with:
-          key: gatsby-cache-folder
-          path: .cache
-
-      # https://github.com/marketplace/actions/cache
-      - name: Gatsby Public Folder
-        uses: actions/cache@v3
-        with:
-          key: gatsby-public-folder
-          path: public
-
-      # https://github.com/marketplace/actions/cache
-      - name: Yarn Cache Node
-        uses: actions/cache@v3
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
       # https://classic.yarnpkg.com/lang/en/docs/cli/install/#toc-yarn-install-pure-lockfile
       - name: Yarn Install
@@ -87,7 +59,7 @@ jobs:
       # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
       - name: Migrate Jaen Data 📝
         # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#
-        working-directory: ${{github.event.client_payload.cwd}}
+        working-directory: ${{ inputs.WORKING_DIRECTORY }}
         # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsif
         if: ${{ github.event_name == 'pull_request' && github.event.action == 'unassigned' }}
         run: |
@@ -101,17 +73,3 @@ jobs:
           git add .
           git commit -m "jaen-publish(jaen-data.json): update jaen-data" || echo "Nothing to commit, working tree clean."
           GIT_TRACE=1 git push -f --verbose origin main
-
-      # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
-      - name: Deploy to Github 🚀
-        # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#
-        working-directory: ${{github.event.client_payload.cwd}}
-        # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsenv
-        env:
-          SCALE_SERP_APIKEY: ${{ secrets.SCALE_SERP_APIKEY }}
-          PLACE_ID: ${{ secrets.PLACE_ID }}
-          SHOPIFY_SHOP_PASSWORD: ${{ secrets.HOPIFY_SHOP_PASSWORD }}
-          SHOP: ${{ secrets.SHOP }}
-          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
-          GATSBY_MAPBOX_ACCESS_TOKEN: ${{ secrets.GATSBY_MAPBOX_ACCESS_TOKEN }}
-        run: yarn deploy:incremental
