--- a/.github/workflows/jaen-deploy.yaml
+++ b/.github/workflows/jaen-deploy.yaml
@@ -8,7 +8,28 @@
 name: Deploy Jaen
 
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions#on
-on: [push]
+on:
+  workflow_call:
+    secrets:
+      SCALE_SERP_APIKEY:
+        description: Public URL of the Microsoft Teams incoming webhook. To get the value, make sure that channel in
+        required: true
+      PLACE_ID:
+        description: Public URL of the Microsoft Teams incoming webhook. To get the value, make sure that channel in
+        required: true
+      SHOPIFY_SHOP_PASSWORD:
+        description: Public URL of the Microsoft Teams incoming webhook. To get the value, make sure that channel in
+        required: true
+      SHOP:
+        description: Public URL of the Microsoft Teams incoming webhook. To get the value, make sure that channel in
+        required: true
+      SENDGRID_API_KEY:
+        description: Public URL of the Microsoft Teams incoming webhook. To get the value, make sure that channel in
+        required: true
+      GATSBY_MAPBOX_ACCESS_TOKEN:
+        description: Public URL of the Microsoft Teams incoming webhook. To get the value, make sure that channel in
+        required: true
+
 
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobs
 jobs:
@@ -26,120 +47,9 @@ jobs:
           # Relative path under $GITHUB_WORKSPACE to place the repository
           path: '.'
 
-      # https://dev.to/mpocock1/how-to-cache-nodemodules-in-github-actions-with-yarn-24eh
-      - name: Yarn Cache Directory Path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      # https://github.com/marketplace/actions/cache
-      - name: Yarn Cache Folder
-        uses: actions/cache@v3
-        with:
-          # https://help.github.com/en/articles/virtual-environments-for-github-actions#default-environment-variables
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      # https://github.com/marketplace/actions/cache
-      - name: Yarn Cache Node
-        uses: actions/cache@v3
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
-
       # https://classic.yarnpkg.com/lang/en/docs/cli/install/#toc-yarn-install-pure-lockfile
       - name: Yarn Install
         run: yarn install --pure-lockfile
-
-      # https://github.com/marketplace/actions/cache
-      - name: Gatsby Cache Folder
-        uses: actions/cache@v3
-        with:
-          key: gatsby-cache-folder
-          path: .cache
-
-      # https://github.com/marketplace/actions/cache
-      - name: Gatsby Public Folder
-        uses: actions/cache@v3
-        with:
-          key: gatsby-public-folder
-          path: public
-
-      # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
-      - name: Configure GitHub Authentication 🔧
-        # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-        run: |
-          # Git: set identity
-          git config user.name "snekmin"
-          git config user.email "noreply.snek.at@gmail.com"
-
-          # Git: set remote  
-          # https://developer.github.com/apps/building-github-apps/authenticating-with-github-apps/#http-based-git-access-by-an-installation
-          git remote set-url origin "https://x-access-token:${{secrets.GITHUB_TOKEN}}@github.com/${GITHUB_REPOSITORY}.git"
-
-      # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
-      - name: Github Package Registry Authentication
-        run: npm set //npm.pkg.github.com/:_authToken ${{ secrets.GITHUB_TOKEN }}
-
-      # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
-      - name: Add Jaen Data 🔧
-        run: |
-          if [[ -z $(git ls-remote --heads origin jaen-storage) ]]; then
-            echo "There is no Jaen data deployed"
-            echo "Configure Jaen gitRemote"
-
-            # Adjust Jaen env
-            gitRemoteTemplate="snek-at/jaen-template"
-            envLocalAdjusted="${envLocal/$gitRemoteTemplate/$GITHUB_REPOSITORY}"
-            sed -i "s|$gitRemoteTemplate|$GITHUB_REPOSITORY|g" .env.local
-            git add .env.local
-
-            # Adjust CNAME
-            domainOld="jaen-template.snek-at.snek.at"
-            domain="${GITHUB_REPOSITORY#*/}.${GITHUB_REPOSITORY%/*}.snek.at"
-            sed -i "s|$domainOld|$domain|g" CNAME
-            git add CNAME
-            
-            # Adjust package.json
-            homepageOld="https://template.snek.at/"
-            homepage="https://$domain/"
-            repositoryOld="git+https://github.com/snek-at/jaen-template.git"
-            repository="git+https://github.com/${GITHUB_REPOSITORY}.git"
-            bugsurlOld="https://github.com/snek-at/jaen-template/issues"
-            bugsurl="https://github.com/${GITHUB_REPOSITORY}/issues"
-            sed -i "s|$homepageOld|$homepage|g" package.json
-            sed -i "s|$repositoryOld|$repository|g" package.json
-            sed -i "s|$bugsurlOld|$bugsurl|g" package.json
-            git add package.json
-            # Git: commit, and push changes
-            git commit -m "deploy(package.json): configure Jaen gitRemote" || echo "Nothing to commit, working tree clean."
-            # GIT_TRACE=1 git push -f --verbose origin main
-
-            echo "Create jaen-storage branch"
-            # Create jean-storage branch without history
-            git checkout --orphan jaen-storage
-            # Remove unnecessary files
-            git rm -rf .
-            # Create `jaen-data.json`
-            echo '' > jaen-data.json
-            # reveal what `jaen-data.json` looks like in the logs
-            cat jaen-data.json
-            # Git: add, commit, and push changes
-            git add jaen-data.json
-            git commit -m "deploy(jaen-data.json): update jaen-data" || echo "Nothing to commit, working tree clean."
-            # GIT_TRACE=1 git push -f --verbose origin jaen-storage
-
-            # Create gh-pages branch without history
-            git checkout --orphan gh-pages
-            echo '' > jaen-data.json
-            git add jaen-data.json
-            git commit -m "deploy(jaen-data.json): update jaen-data" || echo "Nothing to commit, working tree clean."
-            # GIT_TRACE=1 git push -f --verbose origin gh-pages
-          else
-            # Jaen is already configured"
-            echo "Jaen has already been initialized"
-          fi
 
       # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
       - name: Install and Build 🔧
