--- a/.github/workflows/jaen-deploy.yaml
+++ b/.github/workflows/jaen-deploy.yaml
@@ -88,7 +88,7 @@ jobs:
         run: yarn install --pure-lockfile
 
       # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
-      - name: Install and Build 🔧
+      - name: Build and Deploy 🚀
         # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#
         working-directory: ${{github.event.client_payload.cwd}}
         # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsenv
@@ -99,6 +99,4 @@ jobs:
           SHOP: ${{ secrets.SHOP }}
           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
           GATSBY_MAPBOX_ACCESS_TOKEN: ${{ secrets.GATSBY_MAPBOX_ACCESS_TOKEN }}
-        run: |
-          git checkout main
-          yarn deploy:incremental
+        run: yarn deploy:incremental
