--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,9 +25,9 @@ jobs:
     needs: jaen-publish
     uses: ./.github/workflows/jaen-deploy.yaml
     secrets:
-      SCALE_SERP_APIKEY: ${{ secrets.SCALE_SERP_APIKEY }}
-      PLACE_ID: ${{ secrets.PLACE_ID }}
+      SCALE_SERP_API_KEY: ${{ secrets.SCALE_SERP_APIKEY }}
+      SCALE_SERP_PLACE_ID: ${{ secrets.PLACE_ID }}
+      SHOPIFY_SHOP: ${{ secrets.SHOP }}
       SHOPIFY_SHOP_PASSWORD: ${{ secrets.SHOPIFY_SHOP_PASSWORD }}
-      SHOP: ${{ secrets.SHOP }}
       SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
       GATSBY_MAPBOX_ACCESS_TOKEN: ${{ secrets.GATSBY_MAPBOX_ACCESS_TOKEN }}
