--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@sendgrid/mail": "^7.6.2",
     "@snek-at/react-lottie": "^1.0.0-beta.3",
+    "@snek-at/uikit": "1.0.0-beta.3",
     "@types/mapbox-gl": "^2.6.3",
     "@types/react-scroll": "^1.8.3",
     "@types/react-scrollspy": "^3.3.5",
