--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@storybook/manager-webpack5": "^6.3.12",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^10.0.0",
